# simple-starfield

./: .gitignore  CMakeLists.txt  CMakePresets.json  license.txt  readme.md
source/: CMakeLists.txt  main.cpp  memory_utils.h  starfield.cpp  starfield.h  update_stars.cu
